--- a/EuroSys2022/implementation.tex
+++ b/EuroSys2022/implementation.tex
@@ -17,13 +17,13 @@
 %\vspace{-0.1in}
 \end{figure}
 
-As discussed in Section~\ref{sec:intro}, \NM{} proposes an origin-based memory management that should quickly check the origin of every object upon deallocation. In order to support fast checking, \NM{}'s heap layout is designed as  Figure~\ref{fig:overview}. \NM{} requests a large and continuous block of memory from the underlying OS initially, and then divides it evenly into multiple regions based on the number of hardware nodes. Each region is bound to a different physical node via \texttt{mbind} system call. In particular, the first region is bound to the first node, the second one is bound to the second node, and so on. This design enables us to compute the physical node quickly from a memory address: we could compute the index of the physical node by dividing the heap offset by the region size. This layout is different from existing allocators, based on our knowledge. %\todo{There have been machines in the past that use the most significant bits of the physical address to interleave the address space.}
+As discussed in Section~\ref{sec:intro}, \NM{} proposes an origin-based memory management that should quickly check the origin of every object upon deallocation. In order to support fast checking, \NM{}'s heap layout is designed as  Figure ~\ref{fig:overview}. \NM{} requests a large and continuous block of memory from the underlying OS initially, and then divides it evenly into multiple regions based on the number of hardware nodes. Each region is bound to a different physical node via \texttt{mbind} system call. In particular, the first region is bound to the first node, the second one is bound to the second node, and so on. This design enables us to compute the physical node quickly from a memory address: we could compute the index of the physical node by dividing the heap offset by the region size. This layout is different from existing allocators, based on our knowledge. %\todo{There have been machines in the past that use the most significant bits of the physical address to interleave the address space.}
 
 %\NM{} borrows some of these existing mechanisms. First, it uses different mechanisms to manage small and big objects. Second, small objects are also managed by size classes using the BiBOP-style. Third, similar to existing work, such as Linux and TCMalloc~\cite{tcmalloc}, \NA{} utilizes different freelists to track freed objects, and uses the first word of freed objects to link different objects. But the difference of \NM{} is further described in Section~\ref{sec:implement}.
 
-\NM{} also manages small and big objects differently, which is similar to existing allocators as discussed in Section~\ref{sec:commondesign}. Small objects are organized by size classes, and each request will be satisfied from a particular size class. \NA{} utilizes fine-grained size classes for small objects, such as 16 bytes apart for objects less than 128 bytes, and 32 bytes apart for objects between 128 bytes and 256 bytes, then power-of-2 sizes afterward. In \NM{}'s design, big objects are those with a size larger than 512K, which are typically aligned up to megabytes. As shown in Figure~\ref{fig:overview}, each per-node region will be further divided into two sub-regions, one for small objects, and one for big objects. The \texttt{bpSmall} pointer is utilized to track never-allocated small objects, and big ones are tracked with \texttt{bpBig} pointer. 
+\NM{} also manages small and big objects differently, which is similar to existing allocators as discussed in Section~\ref{sec:commondesign}. Small objects are organized by size classes, and each request will be satisfied from a particular size class. \NA{} utilizes fine-grained size classes for small objects, such as 16 bytes apart for objects less than 128 bytes, and 32 bytes apart for objects between 128 bytes and 256 bytes, then power-of-2 sizes afterward. In \NM{}'s design, big objects are those with a size larger than 512K, which are typically aligned up to megabytes. As shown in Figure ~\ref{fig:overview}, each per-node region will be further divided into two sub-regions, one for small objects, and one for big objects. The \texttt{bpSmall} pointer is utilized to track never-allocated small objects, and big ones are tracked with \texttt{bpBig} pointer. 
 
-For small objects, \NM{} utilizes the well-known  ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) style that all objects in the same bag (1 MB by default) will have the same size class. Big objects will be always aligned to 1MB. In order to improve the reliability~\cite{FreeGuard, Guarder}, \NM{} tracks the size information and availability information in a separate area (shown as ``PerMBInfo'' of Figure~\ref{fig:overview}): it tracks the size of each size class for small objects, and the size of the big object (aligned to 1 MB) for big objects. This data structure also includes the used/free information for big objects, which allows coalescing multiple continuous big objects into a bigger object upon deallocations. To save space, \NM{} utilizes the lowest significant bit of ``PerMBInfo'' to encode the availability information.
+For small objects, \NM{} utilizes the well-known  ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) style that all objects in the same bag (1 MB by default) will have the same size class. Big objects will be always aligned to 1MB. In order to improve the reliability~\cite{FreeGuard, Guarder}, \NM{} tracks the size information and availability information in a separate area (shown as ``PerMBInfo'' of Figure ~\ref{fig:overview}): it tracks the size of each size class for small objects, and the size of the big object (aligned to 1 MB) for big objects. This data structure also includes the used/free information for big objects, which allows coalescing multiple continuous big objects into a bigger object upon deallocations. To save space, \NM{} utilizes the lowest significant bit of ``PerMBInfo'' to encode the availability information.
 
 Freed objects of the same size class will be tracked with a freelist. In order to further reduce the contention, \NM{} adapts a per-thread heap that maintains a freelist for each size class, which requires no protection since each thread has its own per-thread heap. However, this may introduce memory blowup~\cite{Hoard} that freed objects of a per-thread heap cannot be utilized for future allocations from other threads, as addressed in Section~\ref{sec:others}. 
 
@@ -49,9 +49,9 @@ As described in Section~\ref{sec:overview}, \NM{} includes an origin-computable 
 
 First, it includes an origin-based deallocation that will always return a freed object to a freelist with the same origin. In particular, if a freed object is originated from a different node, it is returned to its original node's  freelist. Otherwise, a small object is returned back to the thread's freelist and a big object is returned back to the current node's freelist. Comparing to node-based freelist, there is no need to acquire a lock when operating on the per-thread freelist. Different from all existing work, \NM{} may return a freed object into the per-thread list or its original node's freelist, instead of simply putting into the per-thread list. That is, \NM{} considers the originality of objects for deallocations.   
 
-Second, \NM{} always ensures node-local memory allocations. For small objects, it follows this order: (1) the per-thread's freelist will be checked first, since there is no need to acquire any lock and objects may be still hit in the cache (as they are just accessed by the thread); (2) If the per-thread freelist does not have available objects, \NM{} tries to allocate from the current node's freelist; As mentioned above, a node's freelist holds objects originated from this node. (3) If the last two steps fail,  we will allocate the memory from the current node's un-allocated region, as shown by bpSmall in Figure\ref{fig:overview}. In this way, 
+Second, \NM{} always ensures node-local memory allocations. For small objects, it follows this order: (1) the per-thread's freelist will be checked first, since there is no need to acquire any lock and objects may be still hit in the cache (as they are just accessed by the thread); (2) If the per-thread freelist does not have available objects, \NM{} tries to allocate from the current node's freelist; As mentioned above, a node's freelist holds objects originated from this node. (3) If the last two steps fail,  we will allocate the memory from the current node's un-allocated region, as shown by bpSmall in Figure ~\ref{fig:overview}. In this way, 
 %Since the region is bound to the current node, and objects in the per-thread freelist and the per-node freelist are always originated from the current node, 
-\NM{} ensures local allocations for small objects. For big objects, allocation will be satisfied from per-node freelists or un-allocated region (pointed by bpBig pointer in Figure\ref{fig:overview}) of the current node, indicating local allocations for big objects. 
+\NM{} ensures local allocations for small objects. For big objects, allocation will be satisfied from per-node freelists or un-allocated region (pointed by bpBig pointer in Figure ~\ref{fig:overview}) of the current node, indicating local allocations for big objects. 
 
 
 %\subsection{Selective Huge Pages} 
@@ -69,7 +69,7 @@ Second, \NM{} always ensures node-local memory allocations. For small objects, i
 
 
 \subsection{Threads-Shared Incremental Allocation} 
-When Transparent Huge Page is enabled, the OS will prefer to allocate huge pages if a program touches a continuous memory region with the size larger than a huge page (e.g., 2MB). Since \NM{} allocates a large region initially(as shown in Figure~\ref{fig:overview}), huge pages will be employed by the OS correspondingly. However, it is important to reduce memory fragmentation, as one allocation from a memory block will be assigned to a huge page. \NM{} makes multiple threads (from the same node) share the same memory block, instead of having a separate super-block for each thread as Scalloc~\cite{Scalloc}. That is, when a thread is running out of the memory, it obtains only multiple objects at a time (currently 2 pages for very small objects) from the corresponding memory block, instead of getting a whole block (few megabytes) for each per-thread heap. This is the basic reason that \NM{} has much less memory consumption than Scaller, as evaluated in Section~\ref{sec:memory}.  
+When Transparent Huge Page is enabled, the OS will prefer to allocate huge pages if a program touches a continuous memory region with the size larger than a huge page (e.g., 2MB). Since \NM{} allocates a large region initially (as shown in Figure ~\ref{fig:overview}), huge pages will be employed by the OS correspondingly. However, it is important to reduce memory fragmentation, as one allocation from a memory block will be assigned to a huge page. \NM{} makes multiple threads (from the same node) share the same memory block, instead of having a separate super-block for each thread as Scalloc~\cite{Scalloc}. That is, when a thread is running out of the memory, it obtains only multiple objects at a time (currently 2 pages for very small objects) from the corresponding memory block, instead of getting a whole block (few megabytes) for each per-thread heap. This is the basic reason that \NM{} has much less memory consumption than Scaller, as evaluated in Section~\ref{sec:memory}.  
 
 \subsection{Other Mechanisms}
 \label{sec:others}
@@ -98,7 +98,7 @@ Third, the traverse of a global freelist may introduce significant lock contenti
 %\vspace{-0.1in}
 \end{figure}
 
-\NM{} proposes an efficient mechanism and special data structures to avoid these issues. First, each per-thread freelist maintains two pointers that point to the least recently used object (shown as the \texttt{Tail} pointer) and the $nth$ object separately (shown as $nth$ in Figure~\ref{fig:perthreadlist}), where the $n$ is a predefined number that is going to be moved. Each freelist also maintains a pointer (\texttt{Header}) pointing to the most recently used object. This structure avoids the traverse of freelist during the movement, and allows the movement of the least recently used objects (between $(n+1)th$ and $Tail$) to the per-node freelist. After the movement, the \texttt{Tail} pointer will be set to the original $nth$ object. 
+\NM{} proposes an efficient mechanism and special data structures to avoid these issues. First, each per-thread freelist maintains two pointers that point to the least recently used object (shown as the \texttt{Tail} pointer) and the $nth$ object separately (shown as $nth$ in Figure ~\ref{fig:perthreadlist}), where the $n$ is a predefined number that is going to be moved. Each freelist also maintains a pointer (\texttt{Header}) pointing to the most recently used object. This structure avoids the traverse of freelist during the movement, and allows the movement of the least recently used objects (between $(n+1)th$ and $Tail$) to the per-node freelist. After the movement, the \texttt{Tail} pointer will be set to the original $nth$ object. 
 
 %\Maintaining the pointer to the $nth$ object requires only a forward traverse to obtain the pointer of $(n-1)th$ object, and then a thread can migrate $n$ objects (between $(n-1)th$ and the \texttt{Tail} object) easily. 
 %After the migration,  the \texttt{Tail} pointer can be set to the original $nth$ object. However, this mechanism alone cannot reduce the lock contention when multiple threads are concurrently obtaining objects.
@@ -110,7 +110,7 @@ Third, the traverse of a global freelist may introduce significant lock contenti
 %\vspace{-0.1in}
 \end{figure}
 
-Second, \NM{} also proposes a circular array (``ListArray'' as Figure~\ref{fig:listarray}) that helps move objects from per-node freelist to per-thread freelist. As mentioned above, the per-node freelist could easily become the performance bottleneck, since multiple threads may compete for it concurrently. To address this issue, each per-node freelist actually consists of many sub-lists, where a \texttt{Head} pointer and a \texttt{Tail} pointer point to the header and the tail of each sub-list. When a thread is moving multiple objects from the per-node freelist, it could move all objects in a sub-list (pointed by a pair of \texttt{Head} and \texttt{Tail} pointer) at a time. Therefore, there is no need to traverse the whole list to obtain these objects for the movement, which could reduce the contention. 
+Second, \NM{} also proposes a circular array (``ListArray'' as Figure ~\ref{fig:listarray}) that helps move objects from per-node freelist to per-thread freelist. As mentioned above, the per-node freelist could easily become the performance bottleneck, since multiple threads may compete for it concurrently. To address this issue, each per-node freelist actually consists of many sub-lists, where a \texttt{Head} pointer and a \texttt{Tail} pointer point to the header and the tail of each sub-list. When a thread is moving multiple objects from the per-node freelist, it could move all objects in a sub-list (pointed by a pair of \texttt{Head} and \texttt{Tail} pointer) at a time. Therefore, there is no need to traverse the whole list to obtain these objects for the movement, which could reduce the contention. 
 %Then whenever a thread is migrated object,
 
 %The performance overhead of three types of operations can be greatly reduced with this data structure. First, a remote thread will put a freed object into the freelist, based on the origin-based deallocation. This operation can be done in a constant time, by putting the object into the entry pointed by a \texttt{toPut} pointer. Second, a local thread maybe put multiple objects into it, which can be finished in constant time as well. All objects will be put to the entry pointed by a \texttt{toPut} pointer, and then the pointer will be updated to the next entry. Third, the operations for getting objects from it can be done efficiently by simply moving all objects in the current entry, since there is no need to traverse the freelist. Therefore, this data structure reduces the synchronization issue of all operations. 
@@ -127,7 +127,7 @@ Note that this array does not increase the overhead of putting objects. If a thr
 \NA{} proposes an interleaved heap that is inspired by existing profilers\cite{XuNuma, MemProf}: \textit{many NUMA performances issues are related to shared objects allocated in the main thread}. Due to the default first-touch policy~\cite{lameter2013numa, diener2015locality}, objects allocated and touched by the main thread are typically allocated in the node that the main thread is running on. However, these objects can be passed to multiple child threads and be accessed by these threads concurrently so that this node's memory controller becomes the performance bottleneck. 
 %causing the load imbalance issue: the memory controller of this node will be concurrently accessed by multiple threads,
 
-To overcome this issue, \NA{} reserves a range of memory for such objects, called ``Interleaved Heap'' as shown in Figure~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that physical pages of this heap will be allocated from all nodes interleavedly. With this design, when these objects are passed to child threads, these threads may access objects that are allocated from multiple nodes, reducing interconnect congestion and load imbalance of a single node. 
+To overcome this issue, \NA{} reserves a range of memory for such objects, called ``Interleaved Heap'' as shown in Figure ~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that physical pages of this heap will be allocated from all nodes interleavedly. With this design, when these objects are passed to child threads, these threads may access objects that are allocated from multiple nodes, reducing interconnect congestion and load imbalance of a single node. 
 
 \begin{comment}
 \begin{wrapfigure}{r}{0.6\textwidth}
